fix mobile colgap issue and added left and right fade in desktop

--- a/src/containers/newShopLocator/styles.scss
+++ b/src/containers/newShopLocator/styles.scss
@@ -80,10 +80,29 @@ $banner-mobile-height:500px;
             justify-content: start;
             column-gap: 10px;
             overflow-x: auto;
-            max-width: 1106px;
+            max-width: 1171px;
             scroll-behavior: smooth;
             scrollbar-width: none;
             margin : 0 20px;
+            
+            &.left-fade,
+            &.right-fade {
+                mask-image: linear-gradient(to right,
+                transparent 0, black 200px, black calc(100% - 200px), transparent 100%);
+                -webkit-mask-image: linear-gradient(to right,
+                transparent 0, black 200px, black calc(100% - 200px), transparent 100%);
+            }
+            
+            &.left-fade:not(.right-fade) {
+                mask-image: linear-gradient(to right, transparent 0, black 200px, black 100%);
+                -webkit-mask-image: linear-gradient(to right, transparent 0, black 200px, black 100%);
+            }
+            
+           &.right-fade:not(.left-fade) {
+                mask-image: linear-gradient(to right, black 0%, black calc(100% - 200px), transparent 100%);
+                -webkit-mask-image: linear-gradient(to right, black 0%, black calc(100% - 200px), transparent 100%);
+            }
+            
             .slider {
                 display: inline-block;
                 width: 100px;
@@ -100,7 +119,7 @@ $banner-mobile-height:500px;
                 display: flex;
                 align-items: center;
                 justify-content: center;
-                width: 100px;
+                // width: 100px;
                 min-width: 120px;
                 margin: 0 10px;
                 text-align: center;
@@ -115,7 +134,7 @@ $banner-mobile-height:500px;
                     &::after{
                         content:'';
                         display:inline-block;
-                        width:100px;
+                        width:100%;
                         height:4px;
                         border-radius:3px;
                         background-color:$aqua;
@@ -376,18 +395,20 @@ $banner-mobile-height:500px;
             overflow-y: hidden;
             white-space: nowrap;
             .header{
-                // column-gap: 8px;
-                // width: fit-content;
-                // margin:auto;
                 display: flex;
-                gap: 35px;
+                // column-gap: 15px;
                 align-items: center;
                 justify-content: start;
-                padding: 0 20px;
-                margin-bottom: 0;
+                // padding: 0 20px;
+                margin: 0;
+                // margin-bottom: 0;
                 overflow-x: auto;
+                
                 .item {
                    width:auto;
+                   margin: 0;
+                   min-width: fit-content;
+                   padding: 0 20px;
                 }
             }
             &::-webkit-scrollbar{
